# mood-to-makan

./: README.md  README_backend.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Dockerfile  env-example  example.env  pyproject.toml  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 10c7115345f7_add_user_id_in_foods_table_2.py  3ae053fca305_change_user_role_to_enum.py  4f2a1b3c4d5e_add_price_to_foods.py  569c44855b4a_merge_heads.py  6a1b2c3d4e5f_make_food_id_nullable_in_reviews.py  c7e6e0b8a34b_create_tables.py  e9a1ab705be1_add_user_id_in_foods_table.py
backend/app/: main.py
backend/app/api/: ai.py  auth.py  client_badges.py  deps.py  foods.py  reviews.py  stores.py  user_food_history.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  base.py  client_badge.py  food.py  problem_category.py  promotional_keyword.py  review.py  review_analysis.py  store.py  user.py  user_food_history.py
backend/app/schemas/: client_badge.py  description.py  food.py  review.py  review_analysis.py  store.py  user.py  user_food_history.py
backend/app/services/: ai_service.py  s3_service.py
backend/init/: reseed_all.py  seed.py  seed_all_tables.py  seed_descriptions.py  seed_foods.py  seed_review_analysis.py
frontend/: .dockerignore  .env.example  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/components/: BentoGrid.vue  BentoItem.vue  OrganicShape.vue  ToastContainer.vue
frontend/app/composables/: useApi.ts  useToast.ts
frontend/app/layouts/: auth.vue  (+2 more)
(+24 files in other folders)
